[metadata]
name = plover_portuguese
version = 0.2.1
description = Portuguese language system for Plover
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/plover_portuguese
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
py_modules =
	plover_portuguese

[options.entry_points]
plover.system =
  Portuguese Stenotype = plover_portuguese
